[project]
name = "marimo-gradient-descent-regularization"
version = "0.1.0"
description = "Single-file marimo app for teaching gradient descent and regularization (aDAV lecture 4)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo==0.23.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
]
